--- a/index.html
+++ b/index.html
@@ -43,11 +43,77 @@
             display: inline-block;
             margin: 4px 2px;
             transition: transform 0.3s ease-out; /* Add animation transition */
-            outline: none; /* Remove the default focus outline */
         }
 
         .btn img {
             width: 80px; /* Adjust the size of the rotating image */
             height: auto;
             border-radius: 50%;
-            animation: rotate 20
+            animation: rotate 20s linear infinite; /* CSS animation */
+        }
+
+        @keyframes rotate {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        .button-position {
+            position: absolute;
+            bottom: 160px; /* Lifted by 10px */
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1; /* Ensure button is above the video */
+        }
+
+        .btn:hover {
+            opacity: 0.8;
+        }
+
+        /* Media query for tablets */
+        @media (max-width: 768px) {
+            .btn img {
+                width: 60px;
+            }
+
+            .button-position {
+                bottom: 150px; /* Adjusted for better visibility on tablets */
+            }
+        }
+
+        /* Media query for phones */
+        @media (max-width: 480px) {
+            .btn img {
+                width: 100px;
+            }
+
+            .button-position {
+                bottom: 180px; /* Adjusted for better visibility on phones */
+            }
+        }
+    </style>
+</head>
+<body>
+    <video autoplay muted loop class="video-background">
+        <source src="vid2.mp4" type="video/mp4"> <!-- Replace with your video file -->
+        Your browser does not support the video tag.
+    </video>
+    <div class="button-position">
+        <div class="button-container">
+            <button class="btn" onclick="redirectToVideo()">
+                <!-- Replace with your rotating PNG image -->
+                <img src="img3.png" alt="ධර්ම චක්‍රය">
+            </button>
+        </div>
+    </div>
+
+    <script>
+        function redirectToVideo() {
+            window.location.href = 'video.html'; // Make sure to create this page
+        }
+    </script>
+</body>
+</html>
