--- a/index.html
+++ b/index.html
@@ -62,24 +62,27 @@
         }
 
         .text-btn {
-            background: none;
-            border: none;
-            padding: 1px;
-            cursor: pointer;
+            background-color: rgba(255, 255, 255, 0.2); /* Semi-transparent background */
+            border: 2px solid white; /* White border */
             color: white; /* Text color */
-            font-size: 10px; /* Text size */
-            margin-top: 1px; /* Space between image and text button */
-            text-decoration: underline; /* Underline text */
-            transition: opacity 0.3s ease;
+            padding: 5px 10px; /* Smaller padding inside the button */
+            font-size: 12px; /* Smaller text size */
+            margin-top: 10px; /* Space between image and text button */
+            border-radius: 10px; /* Rounded corners */
+            cursor: pointer;
+            transition: opacity 0.3s ease, background-color 0.3s ease;
+            display: inline-block;
+            text-align: center;
         }
 
         .text-btn:hover {
             opacity: 0.8;
+            background-color: rgba(255, 255, 255, 0.3); /* Change background color on hover */
         }
 
         .button-position {
             position: absolute;
-            bottom: 160px; /* Lifted by 10px */
+            bottom: 140px; /* Lifted by 10px */
             left: 50%;
             transform: translateX(-50%);
             z-index: 1; /* Ensure button is above the video */
@@ -98,6 +101,11 @@
             .button-position {
                 bottom: 250px; /* Adjusted for better visibility on tablets */
             }
+
+            .text-btn {
+                font-size: 10px; /* Adjust text size */
+                padding: 4px 8px; /* Adjust padding */
+            }
         }
 
         /* Media query for phones */
@@ -108,6 +116,11 @@
 
             .button-position {
                 bottom: 180px; /* Adjusted for better visibility on phones */
+            }
+
+            .text-btn {
+                font-size: 8px; /* Adjust text size */
+                padding: 3px 6px; /* Adjust padding */
             }
         }
     </style>
