--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         .button-container {
             text-align: center;
             z-index: 1; /* Ensure button is above the video */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .btn {
@@ -82,7 +85,7 @@
 
         .button-position {
             position: absolute;
-            bottom: 140px; /* Lifted by 10px */
+            bottom: 160px; /* Lifted by 10px */
             left: 50%;
             transform: translateX(-50%);
             z-index: 1; /* Ensure button is above the video */
@@ -111,7 +114,7 @@
         /* Media query for phones */
         @media (max-width: 480px) {
             .btn img {
-                width: 100px;
+                width: 60px;
             }
 
             .button-position {
@@ -119,8 +122,8 @@
             }
 
             .text-btn {
-                font-size: 8px; /* Adjust text size */
-                padding: 3px 6px; /* Adjust padding */
+                font-size: 10px; /* Adjust text size */
+                padding: 4px 8px; /* Adjust padding */
             }
         }
     </style>
@@ -136,8 +139,8 @@
                 <!-- Replace with your rotating PNG image -->
                 <img src="img3.png" alt="ධර්ම චක්‍රය">
             </button>
+            <button class="text-btn" onclick="redirectToVideo()">මෙතනින් පිවිසෙන්න</button>
         </div>
-        <button class="text-btn" onclick="redirectToVideo()">මෙතනින් පිවිසෙන්න</button>
     </div>
 
     <script>
