--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                 <!-- Replace with your rotating PNG image -->
                 <img src="img3.png" alt="ධර්ම චක්‍රය">
             </button>
-            <button class="text-btn" onclick="redirectToVideo()">මෙතනින් පිවිසෙන්න</button>
+            <center>
+            <button class="text-btn" onclick="redirectToVideo()">මෙතනින් පිවිසෙන්න</button></center>
         </div>
     </div>
 
