--- a/video.html
+++ b/video.html
@@ -35,7 +35,7 @@
 </style>
 </head>
 <body>
-    <video autoplay muted loop>
+    <video autoplay loop>
         <source src="vid3.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
