--- a/video.html
+++ b/video.html
@@ -12,7 +12,14 @@
             height: 100%;
             overflow: hidden;
         }
-        iframe {
+        .video-container {
+            position: relative;
+            width: 100%;
+            height: 0;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio (9 divided by 16 equals 0.5625) */
+            overflow: hidden;
+        }
+        .video-container iframe {
             position: absolute;
             top: 0;
             left: 0;
@@ -23,8 +30,10 @@
 </head>
 <body>
 
-<!-- Replace VIDEO_ID with the actual ID of your YouTube video -->
-<iframe src="https://www.youtube.com/embed/821OfkRJAgw" frameborder="0" allowfullscreen></iframe>
+<div class="video-container">
+    <!-- Replace VIDEO_ID with the actual ID of your YouTube video -->
+    <iframe src="https://www.youtube.com/embed/821OfkRJAgw?autoplay=1&mute=1" frameborder="0" allowfullscreen></iframe>
+</div>
 
 </body>
 </html>
