--- a/video.html
+++ b/video.html
@@ -11,12 +11,16 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000;
         }
         .video-container {
             position: relative;
             width: 100%;
             height: 0;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio (9 divided by 16 equals 0.5625) */
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
             overflow: hidden;
         }
         .video-container iframe {
