--- a/video.html
+++ b/video.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Screen Embedded YouTube Video</title>
+    <title>Embedded YouTube Video with Background Image</title>
     <style>
-        body, html {
+        body {
             margin: 0;
             padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
+            background-image: url('img4.jpg'); /* Replace with your background image URL */
+            background-size: cover;
+            background-position: center;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #000;
+            height: 100vh;
         }
         .video-container {
             position: relative;
-            width: 100%;
-            height: 0;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            width: 70%; /* Adjust width as needed */
+            max-width: 800px; /* Maximum width of the video container */
+            padding-bottom: 56.25%; /* 16:9 aspect ratio (adjust if needed) */
             overflow: hidden;
         }
         .video-container iframe {
