--- a/video.html
+++ b/video.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('img4.jpg'); /* Replace with your background image URL */
+            background-image: url('your-background-image-url.jpg'); /* Replace with your background image URL */
             background-size: cover;
             background-position: center;
             display: flex;
@@ -29,6 +29,14 @@
             left: 0;
             width: 100%;
             height: 100%;
+        }
+
+        /* Media Query for Mobile Devices */
+        @media (max-width: 768px) {
+            .video-container {
+                width: 90%; /* Increase width for smaller screens */
+                padding-bottom: 70%; /* Adjust aspect ratio for smaller screens */
+            }
         }
     </style>
 </head>
