--- a/video.html
+++ b/video.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded YouTube Video with Background Image</title>
+    <title>Player</title>
     <style>
         body {
             margin: 0;
             padding: 0;
-            background-image: url('your-background-image-url.jpg'); /* Replace with your background image URL */
+            background-image: url('img4.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -16,13 +17,14 @@
             align-items: center;
             height: 100vh;
         }
+
         .video-container {
             position: relative;
-            width: 70%; /* Adjust width as needed */
-            max-width: 800px; /* Maximum width of the video container */
-            padding-bottom: 56.25%; /* 16:9 aspect ratio (adjust if needed) */
+            width: 100lvw;
+            height: 100lvh;
             overflow: hidden;
         }
+
         .video-container iframe {
             position: absolute;
             top: 0;
@@ -30,22 +32,17 @@
             width: 100%;
             height: 100%;
         }
-
-        /* Media Query for Mobile Devices */
-        @media (max-width: 768px) {
-            .video-container {
-                width: 90%; /* Increase width for smaller screens */
-                padding-bottom: 70%; /* Adjust aspect ratio for smaller screens */
-            }
-        }
     </style>
 </head>
+
 <body>
 
-<div class="video-container">
-    <!-- Replace VIDEO_ID with the actual ID of your YouTube video -->
-    <iframe src="https://www.youtube.com/embed/821OfkRJAgw?autoplay=1&mute=1" frameborder="0" allowfullscreen></iframe>
-</div>
+    <div class="video-container">
+        <!-- Replace VIDEO_ID with the actual ID of your YouTube video -->
+        <iframe src="https://www.youtube.com/embed/821OfkRJAgw?autoplay=1&mute=1" frameborder="0"
+            allowfullscreen></iframe>
+    </div>
 
 </body>
+
 </html>
