--- a/video.html
+++ b/video.html
@@ -9,6 +9,7 @@
         body {
             margin: 0;
             padding: 0;
+            background-color: #000000;
             background-image: url('img4.jpg');
             background-size: cover;
             background-position: center;
@@ -30,7 +31,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 90%;
         }
     </style>
 </head>
